--- a/src/StudyBuddyHomePage.html
+++ b/src/StudyBuddyHomePage.html
@@ -17,6 +17,7 @@
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
+                <li>This is the Username</li>
                 <li><a href="#">Chatrooms</a></li>
                 <li><a href="#">Search</a></li>
                 <li><a href="#">Profile</a></li>
