--- a/src/StudyBuddyHomePage.html
+++ b/src/StudyBuddyHomePage.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Search</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Settings</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="http://ctma226.netlab.uky.edu/">Logout</a></li>
             </ul>
         </div>
 
