Updated some things, mostly the login page, not functional yet

--- a/src/login.html
+++ b/src/login.html
@@ -23,7 +23,7 @@
                             <label><b>Password</b></label>
                             <input type="password" placeholder="Enter Password" name="psw" required>
 
-                            <button type="submit">Login</button>
+                            <button type="submit" name="submit">Login</button>
                             <input type="checkbox" checked="checked"> Remember me
                             
                             <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
