--- a/src/signup.html
+++ b/src/signup.html
@@ -1,10 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
         <title>StudyBuddy | Signup</title>
-        <link rel="stylesheet" href="../css/style.css" type="text/css"/>
+        <meta charset="utf-8">
+        <meta name="viewport" conetne="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+        <script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div id="header">
+        <div class="jumbotron">
             StudyBuddy
         </div>
         <div id="mainWrapper">
