--- a/src/StudyBuddyHomePage.html
+++ b/src/StudyBuddyHomePage.html
@@ -43,15 +43,17 @@
 
                         <!-- created chatroom form, calls addChatroom.php and appends chatroom to database <-->
                         <div class = "createRoom" id="createRoom">
-                          <form method="post" action="../functions/addChatroom.php">
-
+                          <form autocomplete="off">
+			    <!-- in chrome, it always autofills the first forms even with autocomplete turned off. This prevents that<-->
+			    <input style="display:none">
+			    <input type="password" style="display:none">
                             <label><b>Chatroom</b></label>
-                            <input type="text" placeholder="Name of Chatroom" name="chatName" id = "chatName" required>
+                            <input type="text" placeholder="Name of Chatroom" autocomplete="off" name="chatName" id = "chatName" required>
 
                             <label><b>Password</b></label>
-                            <input type="password" placeholder="Enter Password" name="psw" required>
+                            <input type="password" placeholder="Enter Password" autocomplete-"off" name="psw" id = "psw" required>
 
-                            <input type="submit" name="submit" id ="chatID">
+                            <button type="button" name="submit" id ="chatID">Create Room</button>
                             <button type="button" onclick="document.getElementById('createRoom').style.display='none'" class="cancelbtn">Cancel</button>
                           </form>
                         </div>
@@ -85,7 +87,7 @@
     <script>
 
         var newChat = $('.createRoom');
-
+	var chatRoomID;
         $("#menu-toggle").click(function (e) {
             e.preventDefault(); <!-- prevent the default action of clicking a button = going to a URL -->
             $("#wrapper").toggleClass("menuDisplayed");
@@ -114,30 +116,103 @@
         $('#chatID').click(function(self){
           self.preventDefault();
           var chatName = $('#chatName').val();
-          $('.chatRoom').append('<div id = "roomContainer">'+'<a href="#" id = "newRoom" name ='+chatName+'>'+chatName+'</a>'+'</div>');
+	  var psw = $('#psw').val();
+
+	  $.ajax({
+		type: "POST",
+		url: "../functions/addChatroom.php",
+		data: {chatName:chatName, psw:psw}
+	  });
+		
+	  $.ajax({
+		url: "../functions/getNewestChatroom.php",
+		data: "",
+		dataType: 'json',
+		success: function(data)
+		{
+			chatRoomID = jQuery.parseJSON(data);
+			$('.chatRoom').append('<div id = "roomContainer">'+'<a href="#" id = "newRoom" name ='+chatRoomID+chatName+'>'+chatRoomID+') '+chatName+'</a>'+'</div>');
+		}
+		});	
+
+	  $('#createRoom').css('display', 'none');
         });
 
 	<!-- Room contained is contained within the .chatroom container -->
 	<!-- meaning the dynamically created hyperlinks inside thhe divs are inside thhe .chatroom class-->
 	<!--Thus, we can select these hyperlinks by manipulating all clicks inside of the chatroom container with id of #newRoom -->
-        $('.chatRoom').on('click', '#newRoom', function(){
+        $('.chatRoom').on('click', '#newRoom', function()
+	{
 
 	<!-- when hyperlink is clicked (if no hyperlink has been clicked at this point, this is the first time the text box and chat box are revealed -->
  	<!-- text and chatbox fit dynamically to the page side by side (at least on my resolution...)) the forms clear themselves out so that the new chatroom -->
 	<!-- will not interfere with the old chatroom. All chatrooms are located inside 2 divs (.window, .commentbox) both inside .chatWindow -->
 	<!-- to reiterate, both of these divs refresh themselves on click. As of now I don't have a good way to add a comment to the sever from this -->
-	<!-- I tried an AJAX function, but the function just ties up the webpage and crashes each time. Top priority on solving, this is one of the main barries to full functionality -->
-          var roomName = $(this).attr('name');
-          $(".window").empty();
-          $("#submitComment")[0].reset();
-          $(".window").css('display', 'block');
-          $(".commentBox").css('display', 'block');
-          $('.commentBox').on('click', '#commentButton', function(thisButton){
-          thisButton.preventDefault();
-          var comment = $('#userComment').val();
-          alert(comment);
-          });
+        	var roomName = $(this).attr('name');
+	 	var chatID = "";
+		
+		for (var iter = 0; iter < roomName.length; iter++)
+		{
+			if (isNaN(roomName[iter]))
+			{
+				break;
+			}
+
+			else 
+			{
+				chatID += roomName[iter];
+			}
+		}
+
+		loadComments(chatID);
+
+         	$(".window").empty();
+                $("#submitComment")[0].reset();
+          	$(".window").css('display', 'block');
+          	$(".commentBox").css('display', 'block');
+         	$('.commentBox').on('click', '#commentButton', function(thisButton)
+		{
+          		thisButton.preventDefault();
+          		var comment = $('#userComment').val();		
+			var UID = "1";
+			$.ajax({
+				type: "POST",
+				datatype: "json",
+				url: "../functions/addComment.php",
+				data: {UID:UID, chatID:chatID, comment:comment}
+			});
+			$("#submitComment").trigger('reset');
+			loadComments(chatID);
+          	});
         });
+
+	function loadComments(chatID)
+	{
+		var names = [];
+		var comments = [];
+		var message = "";
+		$.ajax({
+			type: "POST",
+			url: "../functions/getChatroomComments.php",
+			dataType: 'json',
+			data: {chatID:chatID},
+			success: function(data)
+			{
+				$(".window").empty();
+				if (data['Name'] != "undefined" && data['Comment'] != "undefined")
+				{
+					names = data['Name'];
+					comments = data['Comment'];
+					
+					for (var iter = 0; iter < names.length; iter++)
+					{
+						message = "<p>"+names[iter]+": "+comments[iter]+"</p>";
+						$(message).appendTo($(".window"));
+					}
+				}
+			}
+		});	
+	}
 
     </script>
 </body>
